[project]
name = "fruit-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "cruchau",email = "cruchau@amazon.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.48.0,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
